--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -61,7 +61,7 @@
     }
     &.navbar-shrink {
       border-bottom: 1px solid fade-out($gray-900, .9);
-      background: #111C33;
+      background: $bg-color;
       backdrop-filter: blur(20px);
       -webkit-backdrop-filter: blur(20px);
       margin: 0;
@@ -84,5 +84,9 @@
   @media (max-width: 992px) {
     padding: 32px 8px 8px 8px;
     margin-top: 0px;
+  }
+  @media (max-width: 500px) {
+    background-color: $bg-color;
+    margin-top: -20px;
   }
 }
