--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,3 +15,4 @@ $primary: #203260 !default;
 $dark-secondary: rgba(0, 167, 211, 0.1) !default;
 $link: #2CA0F7 !default;
 $font-size-base: 18px !default;
+$bg-color: #111C33
